Prepare for v0.2.0 release
This commit also:

* Adds Continuous Integration via GitHub Actions
* A changelog
* Appropriate Python classifiers
* Release automation via Tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,py36
+envlist = py36,py37,py38,py39,py310
 
 [testenv]
 deps=
@@ -7,3 +7,13 @@ deps=
 commands=pytest
 setenv =
     KOMBU_FERNET_KEY = BPrPVNtseect4UJ8tiakgnx9uMK93nKq9X8dBg7XeuI=
+
+
+[testenv:release]
+skipinstall = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    python -m twine --skip-uploading dist/*
